# apoa

./: .gitignore  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  SPEC.md
sdk/: README.md  package.json  tsconfig.json
sdk-python/: README.md  demo.py  pyproject.toml
sdk-python/apoa/: __init__.py  audit.py  authorization.py  client.py  constraints.py  crypto.py  delegation.py  errors.py  revocation.py  scope.py  token.py  types.py  utils.py
sdk-python/tests/: conftest.py  generate_ts_fixture.mjs  test_audit.py  test_authorization.py  test_client.py  test_constraints.py  test_cross_sdk.py  test_crypto.py  test_delegation.py  test_revocation.py  test_scope.py  test_token.py  test_utils.py
sdk-python/tests/fixtures/: ts_token.json
sdk/examples/: delegation-chain.ts  healthcare.ts  home-purchase.ts  quickstart.ts
sdk/src/: client.ts  index.ts  types.ts
sdk/src/audit/: log.ts  store.ts  trail.ts
sdk/src/delegation/: chain.ts  verify.ts
sdk/src/revocation/: cascade.ts  revoke.ts  store.ts
sdk/src/scope/: attenuate.ts  check.ts  patterns.ts
sdk/src/token/: create.ts  parse.ts  sign.ts  validate.ts
sdk/src/utils/: crypto.ts  errors.ts  time.ts
sdk/test/: audit.test.ts  authorize.test.ts  browser-mode.test.ts  client.test.ts  crypto.test.ts  delegation.test.ts  errors.test.ts  integration.test.ts  legal.test.ts  parse.test.ts  patterns.test.ts  revocation.test.ts  scope.test.ts  stores.test.ts  time.test.ts  token.test.ts  types.test.ts
